// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`html should return an HTML string with a given staticHost 1`] = `
"
  <!DOCTYPE html>
  <html>
    <head>
      <meta charset=\\"utf-8\\">
      <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0\\">
      <link rel=\\"shortcut icon\\" type=\\"image/x-icon\\" href=\\"https://fakehost.com/assets/favicon.ico\\" />
      <link href=\\"https://fakehost.com/assets/index.css\\" rel=\\"stylesheet\\">

      <title>Unique Title</title>
    </head>
    <body>
      <div id=\\"root\\"></div>
      <script src=\\"https://fakehost.com/assets/index.js\\"></script>
    </body>
  </html>
  "
`;

exports[`html should return an HTML string with a given title 1`] = `
"
  <!DOCTYPE html>
  <html>
    <head>
      <meta charset=\\"utf-8\\">
      <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0\\">
      <link rel=\\"shortcut icon\\" type=\\"image/x-icon\\" href=\\"assets/favicon.ico\\" />
      <link href=\\"assets/index.css\\" rel=\\"stylesheet\\">

      <title>Unique Title</title>
    </head>
    <body>
      <div id=\\"root\\"></div>
      <script src=\\"assets/index.js\\"></script>
    </body>
  </html>
  "
`;
